--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://api.iconify.design/mdi:alpha-t-circle.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thamizharasu Saravanan | Data Science Portfolio</title>
+    <meta name="description" content="Portfolio of Thamizharasu Saravanan, Data Scientist. Explore projects, experience, and contact information." />
+    <meta name="keywords" content="Thamizharasu Saravanan, Data Science, Portfolio, Machine Learning, AI, Projects, Resume" />
+    <meta name="author" content="Thamizharasu Saravanan" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Thamizharasu Saravanan | Data Science Portfolio" />
+    <meta property="og:description" content="Portfolio of Thamizharasu Saravanan, Data Scientist. Explore projects, experience, and contact information." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-portfolio-url.com/" />
+    <meta property="og:image" content="/src/assets/photo.PNG" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Thamizharasu Saravanan | Data Science Portfolio" />
+    <meta name="twitter:description" content="Portfolio of Thamizharasu Saravanan, Data Scientist. Explore projects, experience, and contact information." />
+    <meta name="twitter:image" content="/src/assets/photo.PNG" />
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Thamizharasu Saravanan",
+        "url": "https://your-portfolio-url.com/",
+        "image": "/src/assets/photo.PNG",
+        "sameAs": [],
+        "jobTitle": "Data Scientist",
+        "description": "Portfolio of Thamizharasu Saravanan, Data Scientist. Explore projects, experience, and contact information."
+      }
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Sans+MS:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
